gccida/g2/adjust_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_stack/src/explow.c:1326:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_stack/src/obj/explow.o] Error 1
